[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/object/RoleListUI.gd" type="Script" id=1]
[ext_resource path="res://scene/object/RoleView.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/theme_skillButton.tres" type="Theme" id=3]
[ext_resource path="res://font/font_uiState.tres" type="DynamicFont" id=4]

[node name="RoleListUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 689.661
margin_top = 22.9535
margin_right = 1266.66
margin_bottom = 149.953

[node name="rolePlace" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1364.0
margin_bottom = 110.0

[node name="RoleView" parent="ScrollContainer/rolePlace" instance=ExtResource( 2 )]

[node name="Button5" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 114.0
margin_right = 224.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button5"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button5"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button5"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button6" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 228.0
margin_right = 338.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button6"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button6"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button6"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button7" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 342.0
margin_right = 452.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button7"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button7"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button7"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button8" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 456.0
margin_right = 566.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button8"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button8"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button8"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button9" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 570.0
margin_right = 680.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button9"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button9"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button9"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button10" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 684.0
margin_right = 794.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button10"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button10"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button10"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button11" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 798.0
margin_right = 908.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button11"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button11"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button11"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button12" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 912.0
margin_right = 1022.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button12"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button12"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button12"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button13" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 1026.0
margin_right = 1136.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button13"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button13"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button13"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button14" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 1140.0
margin_right = 1250.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button14"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button14"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button14"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

[node name="Button15" type="Button" parent="ScrollContainer/rolePlace"]
editor/display_folded = true
margin_left = 1254.0
margin_right = 1364.0
margin_bottom = 110.0
rect_min_size = Vector2( 110, 110 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="ScrollContainer/rolePlace/Button15"]
margin_left = 17.7076
margin_top = 18.0
margin_right = 89.7076
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "卡卡罗特"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ScrollContainer/rolePlace/Button15"]
margin_left = 22.0
margin_top = 46.8936
margin_right = 94.0
margin_bottom = 65.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lv1"
align = 1
valign = 1

[node name="Label3" type="Label" parent="ScrollContainer/rolePlace/Button15"]
margin_left = 23.0
margin_top = 75.8936
margin_right = 95.0
margin_bottom = 94.8936
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "勇者"
align = 1
valign = 1

